--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 
-.pplSplit, .arnoldSplit, .ulSplit {
-  display: none;
+.PPLSelect, .ArnoldSelect, .ULSelect, .CustomSplitName {
+    display: none;
 }
 
 .modal {
